--- a/01-html-css-layout/index.html
+++ b/01-html-css-layout/index.html
@@ -23,9 +23,8 @@
     <section id="main">
         <nav>
             <ul>
-                <li><a href="#">London</a></li>
-                <li><a href="#">Paris</a></li>
-                <li><a href="#">Tokyo</a></li>
+                <li><a href="#europe">Europe</a></li>
+                <li><a href="#north-america">North America</a></li>
             </ul>
         </nav>
 
@@ -37,6 +36,7 @@
         </aside>
 
         <section id="europe">
+            <a name="europe"></a>
             <article>
                 <h1>London</h1>
                 <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a
@@ -58,6 +58,9 @@
                 <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going
                     back to its founding by the Romans, who named it Londinium.</p>
             </article>
+        </section>
+        <section id="north-america">
+            <a name="north-america"></a>
             <article>
                 <h1>Paris</h1>
                 <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a
