--- a/01-html-css-layout/index-flex.html
+++ b/01-html-css-layout/index-flex.html
@@ -15,7 +15,7 @@
         <p>With <b>Flexible</b> layout</p>
     </header>
     <nav>
-        <a href="#">Section 1</a>
+        <a id="section1" href="#">Section 1</a>
         <a href="#">Section 2</a>
         <a href="#">Section 3</a>
         <a href="#">Section 4</a>
