--- a/03-es6-features-lab/index.html
+++ b/03-es6-features-lab/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Githhub API Promise Demo</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="github-async-demo.js" defer></script>
+    <script src="github-async-demo.js" defer type="module"></script>
 </head>
 <body>
     <h1>Githhub API Promise Demo</h1>
