materialize + post card stylized

--- a/04-myblogs-rest-es6/index.html
+++ b/04-myblogs-rest-es6/index.html
@@ -42,7 +42,7 @@
 
       <div class="container">
         <div id="errors"></div>
-        <section id="posts"></section>
+        <section id="posts" class="row"></section>
       </div>
     
       <footer class="page-footer orange">
