--- a/04-myblogs-rest-es6/index.html
+++ b/04-myblogs-rest-es6/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <textarea id="content" class="materialize-textarea"></textarea>
+                            <textarea id="content" name="content" class="materialize-textarea"></textarea>
                             <label for="content">Post Text</label>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="row">
                         <div class="chips">
-                            <input placeholder="Blog tags here ..." id="tags" class="tags">
+                            <input placeholder="Blog tags here ..." id="tags" name="tags" class="tags">
                         </div>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="submit">Submit
