--- a/04-myblogs-rest-es6/index.html
+++ b/04-myblogs-rest-es6/index.html
@@ -37,13 +37,13 @@
                 <form id="add-post-form" class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input placeholder="Input your blog title here  ..." id="title" name="title" type="text"
+                            <input id="title" name="title" type="text"
                                 class="validate">
                             <label for="title">Blog Title</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="author" name="author" type="text" class="validate">
-                            <label for="author">Author ID</label>
+                            <input id="authorId" name="authorId" type="text" class="validate">
+                            <label for="authorId">Author ID</label>
                         </div>
                     </div>
                     <div class="row">
@@ -54,9 +54,9 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input placeholder="Input valid image URL here ..." id="url" name="url" type="url"
+                            <input id="imageUrl" name="imageUrl" type="url"
                                 class="validate">
-                            <label for="url">Blog Image URL</label>
+                            <label for="imageUrl">Blog Image URL</label>
                         </div>
                     </div>
                     <div class="row">
@@ -67,7 +67,7 @@
                     <button class="btn waves-effect waves-light" type="submit" name="submit">Submit
                         <i class="material-icons right">send</i>
                     </button>
-                    <button class="btn waves-effect waves-light red lighten-1" type="reset" name="reset">Reset
+                    <button class="btn waves-effect waves-light red lighten-1" type="reset">Reset
                         <i class="material-icons right">cached</i>
                     </button>
                 </form>
