hidden id field added to index.html

--- a/06-myblogs-rest-ts/index.html
+++ b/06-myblogs-rest-ts/index.html
@@ -36,9 +36,11 @@
             <div class="row">
                 <form id="add-post-form" class="col s12">
                     <div class="row">
+                        <input id="id" name="id" hidden>
+                    </div>
+                    <div class="row">
                         <div class="input-field col s6">
-                            <input id="title" name="title" type="text"
-                                class="validate">
+                            <input id="title" name="title" type="text" class="validate">
                             <label for="title">Blog Title</label>
                         </div>
                         <div class="input-field col s6">
@@ -54,8 +56,7 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="imageUrl" name="imageUrl" type="url"
-                                class="validate">
+                            <input id="imageUrl" name="imageUrl" type="url" class="validate">
                             <label for="imageUrl">Blog Image URL</label>
                         </div>
                     </div>
