create blog post using TS complete

--- a/06-myblogs-rest-ts/index.html
+++ b/06-myblogs-rest-ts/index.html
@@ -61,8 +61,9 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="chips">
-                            <input placeholder="Blog tags here ..." id="tags" name="tags" class="tags">
+                        <div class="input-field col s12">
+                            <input id="tags" name="tags" type="text" class="tags">
+                            <label for="tags">Tags</label>
                         </div>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="submit">Submit
